리스트추가

--- a/wrapUp/stp7/style/stp7.scss
+++ b/wrapUp/stp7/style/stp7.scss
@@ -8,7 +8,7 @@
     /* background-color: red; */
 }
 .container {
-    /* background-color: green; */
+    // background-color: green; 
     $padding-inline-value: 64px;
     max-width: 1200px + 2 * $padding-inline-value;
     margin-inline: auto;
